tests/integration/errors/negate_string.rsg
// TEST: compile_error
// EXPECT-ERROR: '-' requires numeric operand

fn main() {
    var x: str = -"hello"
}
